Rorato/src/objects/Employee_Skills__c.object
<CustomObject>
    <description>Employee Skills</description>
    <fields>
        <fullName>Employee_Email__c</fullName>
        <label>Employee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employee Skills</relationshipLabel>
        <relationshipName>Employee_Skills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <picklist>
            <picklistValues>
                <fullName>Less than one year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between 1 and 3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 5 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <description>Grade</description>
        <inlineHelpText>Grade</inlineHelpText>
        <label>Grade</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Employee Skills</relationshipLabel>
        <relationshipName>Employee_Skills</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Skill_Category__c</fullName>
        <description>Skill category</description>
        <inlineHelpText>Skill category</inlineHelpText>
        <label>Skill Category</label>
        <picklist>
            <picklistValues>
                <fullName>Programing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Employee Skills</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Employees_skills</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>Status__c</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>Employees skills</label>
    </listViews>
    <nameField>
        <label>Employee Skills Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Grade_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
ISBLANK(Grade__c),
  Grade__c &gt;5,
  Grade__c &lt;0
)</errorConditionFormula>
        <errorDisplayField>Grade__c</errorDisplayField>
        <errorMessage>Grade must be between 0 to 5, and not blanked.</errorMessage>
    </validationRules>
</CustomObject>